<!-- Copyright (c) 2021 Ulrik Laurén
     Part of RuinMastersTables
     CC BY-NC-SA License, see LICENSE file -->
<resources>
    <string name="app_name">RuinMasters</string>
    <string name="app_intro">To generate a random hex press \nthe corresponding button.</string>
    <string name="app_tab_1">Tables</string>
    <string name="app_tab_2">Monsters</string>
    <string name="terrain">Terrain</string>
    <string name="encounter">Encounter</string>
    <string name="treasure">Treasure</string>
    <string name="btnDismiss">DISMISS</string>
    <string name="btnRandomize">RANDOMIZE</string>

    <string name="skill">%d%%</string>
    <string name="carry">%d kg</string>
    <string name="move">%d m/t  %d hex/t</string>
    <string name="none">None</string>

    <string name="m_tab_1">Stats</string>
    <string name="m_tab_2">Combat</string>
    <string name="m_tab_3">Abilities</string>

    <string name="s_att">Attributes</string>
    <string name="s_phy">Physique</string>
    <string name="s_min">Mind</string>
    <string name="s_int">Intelligence</string>
    <string name="s_cha">Charisma</string>
    <string name="s_ski">Skills</string>
    <string name="s_bur">Burgling</string>
    <string name="s_mel">Melee</string>
    <string name="s_kno">Knowledge</string>
    <string name="s_soc">Social</string>
    <string name="s_mag">Magic</string>
    <string name="s_sur">Survival</string>
    <string name="s_car">Carrying capacity</string>
    <string name="s_siz">Size</string>
    <string name="s_hp">Hit Points</string>
    <string name="s_arm">Natural armor</string>
    <string name="s_act">Actions</string>
    <string name="s_mov_l">Movement (Land)</string>
    <string name="s_mov_a">Movement (Air)</string>

    <string name="c_bod_hdr">Body parts</string>
    <string name="c_bp">Body part</string>
    <string name="c_bp_d10">1D10</string>
    <string name="c_bp_d20">1D20</string>
    <string name="c_bp_p">BpP</string>
    <string name="c_bp_a">Armor</string>
    <string name="c_bp_armor">%1$d+%2$d</string>

    <string name="c_att_hdr">Attacks</string>
    <string name="c_att">Attack</string>
    <string name="c_att_sv">SV</string>
    <string name="c_att_d">Damage</string>

    <string name="a_hdr">Abilities</string>
</resources>
