<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (c) 2021 Ulrik Laurén
     Part of RuinMastersTables
     MIT License, see LICENSE file -->
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TableLayout
            android:id="@+id/monsterCombatBodyTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="6" >
            <TableRow android:background="@color/rm_table_dark" android:layout_marginTop="4dp"  android:paddingHorizontal="4dp" android:paddingTop="4dp" >
                <TextView android:layout_weight="6" android:gravity="center_horizontal" android:fontFamily="@font/header" android:textSize="18sp"
                    android:text="@string/c_bod_hdr" android:id="@+id/bod_stat" />
            </TableRow>
            <TableRow android:background="@color/rm_table_dark"  android:paddingHorizontal="4dp" android:paddingBottom="4dp" >
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/header" android:text="@string/c_bp" />
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/header" android:text="@string/c_bp_d10" android:id="@+id/bod_hit_die"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/header" android:text="@string/c_bp_p" />
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/header" android:text="@string/c_bp_a" />
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_0">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_1">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_2">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_3">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_4">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_5">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_6">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_7">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_8">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_9">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/bp_comment">
                <TextView android:layout_width="0dp" android:layout_weight="6" android:fontFamily="@font/italic_text"/>
            </TableRow>
        </TableLayout>
        <TableLayout
            android:id="@+id/monsterCombatAttackTable"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/monsterCombatBodyTable"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="6" >
            <TableRow android:background="@color/rm_table_dark" android:layout_marginTop="10dp" android:paddingHorizontal="4dp" android:paddingTop="4dp">
                <TextView android:layout_weight="6" android:gravity="center_horizontal" android:fontFamily="@font/header" android:textSize="18sp"
                    android:text="@string/c_att_hdr" android:id="@+id/attacks" />
            </TableRow>
            <TableRow android:background="@color/rm_table_dark"  android:paddingHorizontal="4dp" android:paddingBottom="4dp" >
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/header" android:text="@string/c_att" />
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/header" android:text="@string/c_att_sv" />
                <TextView android:layout_width="0dp" android:layout_weight="3" android:fontFamily="@font/header" android:text="@string/c_att_d" />
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/at_0">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="3" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/c_0">
                <TextView android:layout_width="0dp" android:layout_weight="6" android:fontFamily="@font/italic_text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/at_1">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="3" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/c_1">
                <TextView android:layout_width="0dp" android:layout_weight="6" android:fontFamily="@font/italic_text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/at_2">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="3" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/c_2">
                <TextView android:layout_width="0dp" android:layout_weight="6" android:fontFamily="@font/italic_text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/at_3">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="3" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/c_3">
                <TextView android:layout_width="0dp" android:layout_weight="6" android:fontFamily="@font/italic_text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/at_4">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="3" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/c_4">
                <TextView android:layout_width="0dp" android:layout_weight="6" android:fontFamily="@font/italic_text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/at_5">
                <TextView android:layout_width="0dp" android:layout_weight="2" android:fontFamily="@font/bold_text"/>
                <TextView android:layout_width="0dp" android:layout_weight="1" android:fontFamily="@font/text"/>
                <TextView android:layout_width="0dp" android:layout_weight="3" android:fontFamily="@font/text"/>
            </TableRow>
            <TableRow android:background="@color/rm_table_light" android:padding="4dp" android:visibility="gone" android:id="@+id/c_5">
                <TextView android:layout_width="0dp" android:layout_weight="6" android:fontFamily="@font/italic_text"/>
            </TableRow>
        </TableLayout>
    </RelativeLayout>
</ScrollView>
